# cpp_project_template

./: CMakeLists.txt
.github/workflows/: macos.yml  release.yml  ubuntu.yml  windows.yml
